<?xml version="1.0"?>
<package format="2">
  <name>pcl_to_bin</name>
  <version>0.0.0</version>
  <description>The pcl_to_bin package</description>
  <maintainer email="anne@todo.todo">anne</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <export>
  </export>
</package>
